...
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <ImageButton
                        tools:ignore="contentDescription"
                        android:contentDescription="@string/happy"
                        android:id="@+id/filter_emoji_happy"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:background="@null"
                        android:scaleType="fitCenter"
                        android:src="@drawable/hapi" />

...
                        android:scaleType="fitCenter"
                        android:src="@drawable/angry" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Angry"
                        android:textColor="#F4F2F2"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
...
                android:fontFamily="@font/inter"
                android:text="Past Month"
                android:textColor="#222222"
                android:textSize="11sp"
                android:textStyle="bold"
                app:cornerRadius="10dp"
                app:layout_constraintEnd_toStartOf="@id/week_filter_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.33" />

            <Button
                android:id="@+id/week_filter_button"
...
                app:layout_constraintWidth_percent="0.33" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <Button
            android:id="@+id/done_filter_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#EEEAEA"
            android:fontFamily="@font/inter"
            android:text="Done"
            android:textColor="#222222"
...
            android:text="Filter By:"
            android:textColor="#FDFAFA"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.085"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/desc" />

        <TextView
            android:id="@+id/filter_textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
...
